[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h3xrecon-client"
dynamic = ["version"]
description = 'Client for the H3xRecon Bug Bounty Reconnaissance Automation System'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "h3xit", email = "h3xit@protonmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "asyncio==3.4.3",
    "loguru==0.7.2",
    "asyncpg==0.30.0",
    "nats-py==2.9.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "tabulate==0.9.0",
    "docopt==0.6.2",
    "PyYAML==6.0.2"
]

[project.urls]
Documentation = "https://github.com/h3xit/h3xrecon-client#readme"
Issues = "https://github.com/h3xit/h3xrecon-client/issues"
Source = "https://github.com/h3xit/h3xrecon-client"

[tool.hatch.version]
path = "src/h3xrecon_client/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/h3xrecon_client tests}"

[tool.coverage.run]
source_pkgs = ["h3xrecon_client", "tests"]
branch = true
parallel = true
omit = [
  "src/h3xrecon_client/__about__.py",
]

[project.scripts]
h3xrecon-client = "h3xrecon_client.client:main"

[tool.coverage.paths]
h3xrecon_client = ["src/h3xrecon_client", "*/h3xrecon-client/src/h3xrecon_client"]
tests = ["tests", "*/h3xrecon-client/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
